<resources>
    <string name="app_name">Your Tube</string>
    <string name="search_your_tube">Search Your Tube</string>
    <string name="search_your_tube_icon">Search Your Tube icon</string>
    <string name="tmkoc">Taarak Mehta Ka Ooltah Chashmah - Full Episode 509 - 7th March, 2020</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="channel">Channel</string>
    <string name="likes">Likes</string>
    <string name="date">Date</string>
    <string name="_879">879</string>
    <string name="_02_02">02-02</string>
    <string name="views">Views</string>
    <string name="year">year</string>
    <string name="description">Description</string>
    <string name="video_thumbn">Video Thumbnail</string>
    <string name="next_button">Next Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_text_found">No text found</string>
    <string name="no_results_found">No data found</string>
    <string name="_1">1</string>
</resources>